kubernetes/swiggy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swiggy-deployment
  labels:
    app: swiggy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: swiggy
  template:
    metadata:
      labels:
        app: swiggy
    spec:
      containers:
        - name: swiggy
          image: sijomt/swiggy_clone:latest
          ports:
            - containerPort: 3000
