kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swiggy-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: happydine.xyz
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: swiggy-service
                port:
                  number: 3000
